# barcelona

./: Dockerfile  README.md  mkdocs.yml  pyproject.toml  start.py
.github/workflows/: barcelona.yml
barcelona/: cli.py  scrapper.py  screen.py
docs/: index.md
